# frc_ros_sim

./: CMakeLists.txt  README.md  package.xml
config/: diffdrive.yaml  robot_drive.yaml
launch/: 13-diffdrive.launch  display.launch  gazebo.launch  robot.launch  websocket_sim.launch
my_robot/: config.json  robot.urdf  robot.urdf.xacro  robot_body.part  robot_body.stl  wheel.part  wheel.stl
robot_code/: build.gradle
robot_code/src/main/java/frc/robot/: Constants.java  RobotContainer.java
robot_code/src/main/java/frc/robot/sim/: DriveSimData.java  PretendDevice.java  PretendDeviceSim.java
robot_code/src/main/java/frc/robot/subsystems/: DriveSubsystem.java
scripts/: drive_model.py  drivetrain_model.py  tank_drive.py  test_script.py  websocket_interface.py  wpi_websockets.py
urdf/: robot.urdf.xacro  ros2d2.urdf.xacro
